20220525 유효기간 반영완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <!-- MainActivity text -->
     <string name="add_gift">추가하기</string>
     <!-- AddTodoActivity text -->
-    <string name="title">제목</string>
-    <string name="hint_title">해야 할 일을 입력해주세요.</string>
+    <string name="title">설명</string>
+    <string name="hint_title">제품 설명</string>
     <string name="hint_brand">브랜드명</string>
 
     <string name="importance">중요도</string>
