--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <!-- MainActivity text -->
     <string name="add_gift">추가하기</string>
     <!-- AddTodoActivity text -->
-    <string name="title">설명</string>
+    <string name="title">상품명</string>
     <string name="hint_title">제품 설명</string>
     <string name="hint_brand">브랜드명</string>
 
@@ -11,5 +11,5 @@
     <string name="importance_low">낮음</string>
     <string name="importance_middle">중간</string>
     <string name="importance_high">높음</string>
-    <string name="completion">완료</string>
+    <string name="save">저장</string>
 </resources>
